--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@ of topics. The website was designed in a user friendly manner. User can download
           <div class="social-link">
             <ul>
               <li><a href="http://facebook.com/kanhaiya.tripathi2"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+              <li><a href="https://twitter.com/mymurgi"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://plus.google.com/u/1/115561197344392641290"><i class="fa fa-google-plus"></i></a></li>
               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
               <li><a href="http://kanhaiyatripathi.github.io"><i class="fa fa-html5"></i></a></li>
               <li><a href="http://github.com/kanhaiyatripathi"><i class="fa fa-github"></i></a></li>
