--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <span>18 August 1995</span>
             </div>
             <div class="hobies-bio">
-              <span>Hobies </span>
+              <span>Hobbies </span>
               <span>Playing and watching cricket, Coding , watching porn , watching Youtube</span>
             </div>
             <div class="address-bio">
@@ -96,7 +96,7 @@
         <div class="col-md-6">
           <div class="bio">
             <h2>My Note</h2>
-            <p>Hi! My name is <strong>Kanhaiya Tripathi</strong>, I'm a programmer. I enjoy in writing codes.
+            <p>Hi! My name is <strong>Kanhaiya Tripathi</strong>, I'm a programmer. I enjoy writing codes.
               I love to learn new algorithms.
 
               <br><br><br><br>
