--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
             <div class="hobies-bio">
               <span>Hobbies </span>
-              <span>Writing Programs, Playing and watching cricket, Coding , watching movies , watching Youtube</span>
+              <span>Playing and watching cricket, Coding , watching movies , watching Youtube</span>
             </div>
             <div class="address-bio">
               <span><i class="fa fa-map-maker"></i>Address</span>
